# RouterWay-StaticCapacitor

./: Cargo.toml  LICENSE  README.md  config.toml  nginx_test.conf  routerway
Public/: index.html
Public/Errors/: 400.html  403.html  404.html  500.html  502.html  503.html
src/: cache.rs  config.rs  main.rs  server.rs
