[package]
name = "routerway-server"
version = "1.0.0"
edition = "2021"
authors = ["RouterWay Team"]
description = "高性能异步HTTP服务器，支持百万级并发连接"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.4"
memmap2 = "0.7"
walkdir = "2.3"
mime_guess = "2.0"
url = "2.4"
percent-encoding = "2.3"

[profile.release]
# 优化配置以获得最佳性能
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1